force-app/main/default/objects/Feature__c/Feature__c.object-meta.xml
<CustomObject>
    <description>Major functionality grouping that contains multiple user stories</description>
    <label>Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>