force-app/main/default/objects/Feature__c/fields/Current_Org__c.field-meta.xml
<CustomField>
    <fullName>Current_Org__c</fullName>
    <description>Derived from child story statuses — shows which environment the feature is currently in (Development, SIT, QA, UAT, Production, On Hold)</description>
    <label>Current Org / Environment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>