force-app/main/default/objects/Feature__c/fields/Feature_Progress__c.field-meta.xml
<CustomField>
    <fullName>Feature_Progress__c</fullName>
    <description>Average of story progress</description>
    <label>Feature Progress %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>