force-app/main/default/objects/Feature__c/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <description>Reason why this feature is Pending (auto-set when all stories are Pending)</description>
    <label>Pending Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>