force-app/main/default/objects/Feature__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <description>Sprint this feature belongs to</description>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>