force-app/main/default/objects/Feature__c/validationRules/Progress_Cannot_Exceed_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Progress_Cannot_Exceed_100</fullName>
    <active>true</active>
    <description>Ensures feature progress percentage does not exceed 100%</description>
    <errorConditionFormula>Feature_Progress__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Feature_Progress__c</errorDisplayField>
    <errorMessage>Feature progress cannot exceed 100%. Please verify story progress calculations.</errorMessage>
</ValidationRule>